--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -398,7 +398,7 @@
         <meta-data android:name="android.provider.CONTACTS_STRUCTURE" android:resource="@xml/contactsformat" />
     </service>
 
-    <receiver android:name=".gcm.GcmBroadcastReceiver" android:permission="com.google.android.c2dm.permission.SEND" >
+    <receiver android:name=".gcm.GcmBroadcastReceiver" >
         <intent-filter>
             <action android:name="com.google.android.c2dm.intent.RECEIVE" />
             <category android:name="org.thoughtcrime.securesms" />
